# xtouch-gw

./: .gitignore  AUDIT_STATE_BUGS.md  AUDIT_STATE_PROGRESS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  DRY_REFACTORING_TODO.md  GAMEPAD-MULTISUPPORT-STATUS.md  MEMORY.md  Makefile  README.md  README_TS.md  RUST_MIGRATION_SPEC.md  TASKS.md  TODO.md  TRAY_IMPLEMENTATION_PROGRESS.md  VERSION.txt  audit-report.html  build.rs  config.example.yaml  full_log.txt  make.ps1  package.json  resources.rc  rustfmt.toml
.claude/: settings.local.json
.claude/agents/: config-expert.md  gamepad-dev.md  midi-debugger.md  obs-driver.md  performance-auditor.md  router-expert.md  streamdeck-plugin-dev.md  test-writer.md  xtouch-hardware.md
.claude/commands/: continue-fix.md
.claude/skills/: continue-fix.md
.githooks/: pre-commit
docs/: ERROR_HANDLING.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  STATE_ACTOR_ARCHITECTURE.md  TRAY_ARCHITECTURE.md  adapt_obs_split_spec_d8137dd0.plan.md  spec-split-obs.md  xtouch-gw-api.postman_collection.json  xtouch-matching.csv
docs/protocols/: mcu-7segment.md
editor/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
editor/src/: app.css  app.html
installer/: build-installer.ps1  xtouch-gw.iss
scripts/: add-defender-exclusion.ps1  probe_7seg_mcu.py  smoke_xtouch.py  version-bump.ps1
src/: app.rs  cli.rs  config.rs  control_mapping.rs  display.rs  driver_setup.rs  drivers.rs  event_bus.rs  helpers.rs  lib.rs  main.rs  midi.rs  obs_indicators.rs  paths.rs  router.rs  sniffer.rs  state.rs  xtouch.rs
src/api/: mod.rs
src/api_editor/: action_catalog.rs  actions.rs  live.rs  midi_picker.rs  mod.rs  obs_picker.rs  page.rs  profiles.rs  schema.rs  static_spa.rs  validate.rs
src/config/: mod.rs  profiles.rs  watcher.rs
src/config_editor/: app.rs  io.rs  mod.rs  state.rs  tabs.rs  validation.rs
src/drivers/: console.rs  midibridge.rs  mod.rs  obs.rs  qlc.rs
src/input/: mod.rs
src/router/: anti_echo.rs  camera_target.rs  driver.rs  event_bus.rs  feedback.rs  feedback_toggle.rs  indicators.rs  mod.rs  page.rs  page_availability.rs  refresh.rs  refresh_plan.rs  refresh_plan_tests.rs  tests.rs  voicemeeter_detector.rs  xtouch_input.rs
src/state/: actor.rs  actor_handle.rs  builders.rs  commands.rs  persistence.rs  persistence_actor.rs  store.rs  types.rs
src/tray/: activity.rs  handler.rs  icons.rs  manager.rs  mod.rs
src/xtouch/: fader_setpoint.rs  fader_touch.rs  pitch_bend_squelch.rs  seven_segment.rs
static/: sniffer.html
streamdeck-plugin/com.juliencr.xtouch-gw.sdPlugin/: manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  (+1 more)
tests/: editor_api.rs
(+110 files in other folders)
