[package]
name = "xtouch-gw"
version = "3.0.0"
edition = "2021"
authors = ["XTouch GW Team"]
description = "Gateway to control Voicemeeter, QLC+, and OBS from Behringer X-Touch"
license = "MPL-2.0"
repository = "https://github.com/yourusername/xtouch-gw-v3"
readme = "README.md"
keywords = ["midi", "xtouch", "obs", "voicemeeter", "qlc"]
categories = ["multimedia", "hardware-support"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# MIDI
midir = "0.10"

# WebSocket and OBS
tokio-tungstenite = "0.24"
obws = { version = "0.11", features = ["events"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_bytes = "0.11"
csv = "1.3"

# File watching for hot reload
notify = "6.1"

# Gamepad support - Hybrid backend (XInput + WGI)
# gilrs with default features enables WGI backend for non-XInput controllers (FaceOff)
# rusty-xinput provides direct XInput polling without window requirement
gilrs = "0.11"
rusty-xinput = "1.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Terminal and CLI
colored = "2.1"
rustyline = "14.0"
clap = { version = "4.5", features = ["derive", "env"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time and duration handling
chrono = "0.4"

# HTTP server for web UI
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Utilities
dashmap = "6.0"  # Lock-free concurrent hashmap
crossbeam = "0.8"  # Lock-free data structures
parking_lot = "0.12"  # Faster mutexes
once_cell = "1.20"  # Lazy statics
bytes = "1.7"
hex = "0.4"
sha1 = "0.10"

# System tray UI
tray-icon = "0.14"  # Native Windows tray integration
muda = "0.13"  # Menu builder
image = "0.25"  # Icon generation

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[dev-dependencies]
criterion = "0.5"  # Benchmarking
proptest = "1.5"  # Property-based testing
tempfile = "3.13"
mockito = "1.5"
serial_test = "3.1"  # For tests that need exclusive access

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

# For development with reasonable performance
[profile.dev]
opt-level = 1

# For profiling
[profile.profiling]
inherits = "release"
debug = true